--- a/_main.cfg
+++ b/_main.cfg
@@ -8,6 +8,7 @@
     {~add-ons/Ladder_Era/macros}
     {~add-ons/Ladder_Era/scenarios}
     {~add-ons/Ladder_Era/map_picker}
+    {~add-ons/Ladder_Era/map_picker/scenarios}
     {~add-ons/Ladder_Era/era.cfg}
 
     [units]
