--- a/era.cfg
+++ b/era.cfg
@@ -1,10 +1,13 @@
 #textdomain wesnoth-multiplayer
 
+#define LADDER_ERA_VERSION
+"0.1.1"#enddef
+
 [era]
     id=ladder_era
     name=_"Ladder Era"
     require_era=yes
-    addon_min_version="0.1.0"
+    addon_min_version={LADDER_ERA_VERSION}
     description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
 
     # Only approved maps can be played with this era
@@ -22,5 +25,7 @@
     {QUICK_4MP_LEADERS}
     {LE_SLOW_6MP_LEADERS}
     {LE_TRAIT_HARDY_EVENT}
-    {LE_PRESERVE_COLORS}
+    {LE_PRINT_VERSION {LADDER_ERA_VERSION}}
 [/era]
+
+#undef LADDER_ERA_VERSION
