--- a/macros/map_picker.cfg
+++ b/macros/map_picker.cfg
@@ -1,11 +1,93 @@
 
-# Common code for map picker scenarios
+#define LE_SAVE_SINGLE_SIDE LEADER_ID SIDE_VARIABLE_NAME
+    # Can't use side number here because of shuffle sides
+    [store_side]
+        [has_unit]
+            id={LEADER_ID}
+        [/has_unit]
+        variable={SIDE_VARIABLE_NAME}
+    [/store_side]
+#enddef
 
-#define LE_MAP_PICKER_COMMON_CODE MAP_POOL
-    map_data="{~add-ons/Ladder_Era/map_picker/Map_Picker_UI.map}"
+#define LE_SAVE_SIDES
+    {LE_SAVE_SINGLE_SIDE id1 side1}
+    {LE_SAVE_SINGLE_SIDE id2 side2}
+#enddef
+
+#define LE_LOAD_SINGLE_SIDE LEADER_ID SIDE_VARIABLE_NAME
+    # Can't use side number here because of shuffle sides
+    [modify_side]
+        [filter_side]
+            [has_unit]
+                id={LEADER_ID}
+            [/has_unit]
+        [/filter_side]
+        village_gold=${SIDE_VARIABLE_NAME}.village_gold
+        recruit=${SIDE_VARIABLE_NAME}.recruit
+        color=${SIDE_VARIABLE_NAME}.color
+    [/modify_side]
+#enddef
+
+#define LE_LOAD_SIDES
+    [event]
+        name=prestart
+
+        {LE_LOAD_SINGLE_SIDE id1 side1}
+        {LE_LOAD_SINGLE_SIDE id2 side2}
+        {CLEAR_VARIABLE side1,side2,next_scenario}
+    [/event]
+#enddef
+
+#define LE_SIDE1
+  side=1
+  id=id1
+#enddef
+
+#define LE_SIDE2
+  side=2
+  id=id2
+#enddef
+
+#define LE_RANDOM_SCENARIO_COMMON_CODE
+    allow_new_game=no
+    experience_modifier=70
+    {LE_LOAD_SIDES}
+#enddef
+
+#define LE_MAP_CHECKBOX MAP_ID MAP_NAME
+    [checkbox]
+        id={MAP_ID}
+        name={MAP_NAME}
+        default=yes
+    [/checkbox]
+#enddef
+
+# Is used as part of CREATE_MAP_POOL for the LE_MAP_PICKER_COMMON_CODE
+#define LE_MAP_POOL MAP_ID
+    [if]
+        [variable]
+            name={MAP_ID}
+            equals=yes
+        [/variable]
+        [then]
+            [set_variables]
+                name=map_pool
+                mode=append
+                [value]
+                    id={MAP_ID}
+                [/value]
+            [/set_variables]
+        [/then]
+    [/if]
+    {CLEAR_VARIABLE {MAP_ID}}
+#enddef
+
+# Common code for map picker scenarios
+#define LE_MAP_PICKER_COMMON_CODE CREATE_MAP_POOL
+    map_data="{~add-ons/Ladder_Era/map_picker/ui/Map_Picker_UI.map}"
 
     [side]
-        side=1
+        {LE_SIDE1}
         canrecruit=yes
         controller=human
         team_name=team1
@@ -13,7 +95,7 @@
         fog=yes
     [/side]
     [side]
-        side=2
+        {LE_SIDE2}
         canrecruit=yes
         controller=human
         team_name=team2
@@ -24,10 +106,17 @@
     [event]
         name=prestart
 
-        {RANDOM {MAP_POOL}}
+        {LE_SAVE_SIDES}
+
+        {CREATE_MAP_POOL}
+        {RANDOM "1..$map_pool.length"}
+        {VARIABLE next_scenario $map_pool["$($random - 1)"].id}
+
+        {CLEAR_VARIABLE map_pool,random}
+
         [endlevel]
             result=victory
-            next_scenario=$random
+            next_scenario=$next_scenario
 
             carryover_percentage=0
             carryover_report=false
