--- a/map_picker/Adventurous_Maps.cfg
+++ b/map_picker/Adventurous_Maps.cfg
@@ -2,7 +2,37 @@
 [multiplayer]
     id=Ladder_Adventurous_Maps
     name=_"Ladder Adventurous Maps"
-    description=_"Aethermaw, Arcanclave Citadel, Clearing Gushes, Elensefar Courtyard, Hellhole, Howling Ghost Badlands, Ruined Passage, Ruphus Isle, Swamp of Dread, The Walls of Pyrennis, Thousand Stings Garrison, Tombs of Kesorak"
+    description=_"Pool of maps may be configured under the <i>Custom Options</i> tab. Note that quitting the game does not reset the map pool configuration.
+Aethermaw, Arcanclave Citadel, Clearing Gushes, Elensefar Courtyard, Hellhole, Howling Ghost Badlands, Ruined Passage, Ruphus Isle, Swamp of Dread, The Walls of Pyrennis, Thousand Stings Garrison, Tombs of Kesorak"
 
-    {LE_MAP_PICKER_COMMON_CODE "multiplayer_Aethermaw,multiplayer_Arcanclave_Citadel,multiplayer_Clearing_Gushes,multiplayer_elensefar_courtyard,multiplayer_Hellhole,multiplayer_Howling_Ghost_Badlands,multiplayer_Ruined_Passage,multiplayer_Ruphus_Isle,multiplayer_Swamp_of_Dread,multiplayer_The_Walls_of_Pyrennis,multiplayer_thousand_stings_garrison,multiplayer_Tombs_of_Kesorak"}
+    [options]
+        {LE_MAP_CHECKBOX multiplayer_Aethermaw_Ladder_Random _"2p — Aethermaw"}
+        {LE_MAP_CHECKBOX multiplayer_Arcanclave_Citadel_Ladder_Random _"2p — Arcanclave Citadel"}
+        {LE_MAP_CHECKBOX multiplayer_Clearing_Gushes_Ladder_Random _"2p — Clearing Gushes"}
+        {LE_MAP_CHECKBOX multiplayer_elensefar_courtyard_Ladder_Random _"2p — Elensefar Courtyard"}
+        {LE_MAP_CHECKBOX multiplayer_Hellhole_Ladder_Random _"2p — Hellhole"}
+        {LE_MAP_CHECKBOX multiplayer_Howling_Ghost_Badlands_Ladder_Random _"2p — Howling Ghost Badlands"}
+        {LE_MAP_CHECKBOX multiplayer_Ruined_Passage_Ladder_Random _"2p — Ruined Passage"}
+        {LE_MAP_CHECKBOX multiplayer_Ruphus_Isle_Ladder_Random _"2p — Ruphus Isle"}
+        {LE_MAP_CHECKBOX multiplayer_Swamp_of_Dread_Ladder_Random _"2p — Swamp of Dread"}
+        {LE_MAP_CHECKBOX multiplayer_The_Walls_of_Pyrennis_Ladder_Random _"2p — The Walls of Pyrennis"}
+        {LE_MAP_CHECKBOX multiplayer_thousand_stings_garrison_Ladder_Random _"2p — Thousand Stings Garrison"}
+        {LE_MAP_CHECKBOX multiplayer_Tombs_of_Kesorak_Ladder_Random _"2p — Tombs of Kesorak"}
+    [/options]
+
+    {LE_MAP_PICKER_COMMON_CODE
+    (
+        {LE_MAP_POOL multiplayer_Aethermaw_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Arcanclave_Citadel_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Clearing_Gushes_Ladder_Random}
+        {LE_MAP_POOL multiplayer_elensefar_courtyard_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Hellhole_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Howling_Ghost_Badlands_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Ruined_Passage_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Ruphus_Isle_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Swamp_of_Dread_Ladder_Random}
+        {LE_MAP_POOL multiplayer_The_Walls_of_Pyrennis_Ladder_Random}
+        {LE_MAP_POOL multiplayer_thousand_stings_garrison_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Tombs_of_Kesorak_Ladder_Random}
+    )}
 [/multiplayer]
