--- a/map_picker/Classic_Maps.cfg
+++ b/map_picker/Classic_Maps.cfg
@@ -2,7 +2,33 @@
 [multiplayer]
     id=Ladder_Classic_Maps
     name=_"Ladder Classic Maps"
-    description=_"Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Hornshark Island, Sablestone Delta, Silverhead Crossing, Sullas Ruins, The Freelands, Weldyn Channel"
+    description=_"Pool of maps may be configured under the <i>Custom Options</i> tab. Note that quitting the game does not reset the map pool configuration.
+Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Hornshark Island, Sablestone Delta, Silverhead Crossing, Sullas Ruins, The Freelands, Weldyn Channel"
 
-    {LE_MAP_PICKER_COMMON_CODE "multiplayer_Basilisk,multiplayer_Den_of_Onis_Ladder,multiplayer_Fallenstar_Lake,multiplayer_Hamlets_Ladder,multiplayer_Hornshark_Island,multiplayer_Sablestone_Delta,multiplayer_Silverhead_Crossing_Ladder,multiplayer_Sullas_Ruins,multiplayer_The_Freelands_Ladder,multiplayer_Weldyn_Channel"}
+    [options]
+        {LE_MAP_CHECKBOX multiplayer_Basilisk_Ladder_Random _"2p — Caves of the Basilisk"}
+        {LE_MAP_CHECKBOX multiplayer_Den_of_Onis_Ladder_Random _"2p — Den of Onis"}
+        {LE_MAP_CHECKBOX multiplayer_Fallenstar_Lake_Ladder_Random _"2p — Fallenstar Lake"}
+        {LE_MAP_CHECKBOX multiplayer_Hamlets_Ladder_Random _"2p — Hamlets"}
+        {LE_MAP_CHECKBOX multiplayer_Hornshark_Island_Ladder_Random _"2p — Hornshark Island"}
+        {LE_MAP_CHECKBOX multiplayer_Sablestone_Delta_Ladder_Random _"2p — Sablestone Delta"}
+        {LE_MAP_CHECKBOX multiplayer_Silverhead_Crossing_Ladder_Random _"2p — Silverhead Crossing"}
+        {LE_MAP_CHECKBOX multiplayer_Sullas_Ruins_Ladder_Random _"2p — Sulla’s Ruins"}
+        {LE_MAP_CHECKBOX multiplayer_The_Freelands_Ladder_Random _"2p — The Freelands"}
+        {LE_MAP_CHECKBOX multiplayer_Weldyn_Channel_Ladder_Random _"2p — Weldyn Channel"}
+    [/options]
+
+    {LE_MAP_PICKER_COMMON_CODE
+    (
+        {LE_MAP_POOL multiplayer_Basilisk_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random}
+        {LE_MAP_POOL multiplayer_The_Freelands_Ladder_Random}
+        {LE_MAP_POOL multiplayer_Weldyn_Channel_Ladder_Random}
+    )}
 [/multiplayer]
