--- a/era.cfg
+++ b/era.cfg
@@ -1,7 +1,19 @@
 #textdomain wesnoth-multiplayer
 
 #define LADDER_ERA_VERSION
-"0.1.1"#enddef
+"0.1.2"#enddef
+
+#define LE_MAP_PICKER_IDS
+Ladder_All_Maps,Ladder_Classic_Maps,Ladder_Adventurous_Maps#enddef
+
+#define LE_1v1_DEFAULT_SCENARIO_IDS
+multiplayer_Aethermaw,multiplayer_Arcanclave_Citadel,multiplayer_Basilisk,multiplayer_Clearing_Gushes,multiplayer_elensefar_courtyard,multiplayer_Fallenstar_Lake,multiplayer_Hellhole,multiplayer_Hornshark_Island,multiplayer_Howling_Ghost_Badlands,multiplayer_Ruined_Passage,multiplayer_Ruphus_Isle,multiplayer_Sablestone_Delta,multiplayer_Sullas_Ruins,multiplayer_Swamp_of_Dread,multiplayer_The_Walls_of_Pyrennis,multiplayer_thousand_stings_garrison,multiplayer_Tombs_of_Kesorak,multiplayer_Weldyn_Channel#enddef
+
+#define LE_1v1_MODIFIED_SCENARIO_IDS
+multiplayer_Den_of_Onis_Ladder,multiplayer_Hamlets_Ladder,multiplayer_Silverhead_Crossing_Ladder,multiplayer_The_Freelands_Ladder#enddef
+
+#define LE_2v2_SCENARIO_IDS
+multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hopping_Isle,multiplayer_Clash,multiplayer_Geothermal,multiplayer_4p_Hamlets,multiplayer_Isars_Cross,multiplayer_King_of_the_Hill,multiplayer_Loris_River,multiplayer_4p_Morituri,multiplayer_Paths_of_Daggers,multiplayer_Ruins_of_Terra-Dwelve,multiplayer_Siege_Castles,multiplayer_4p_Underworld,multiplayer_Xanthe_Chaos#enddef
 
 [era]
     id=ladder_era
@@ -11,7 +23,7 @@
     description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
 
     # Only approved maps can be played with this era
-    allow_scenario=Ladder_All_Maps,Ladder_Classic_Maps,Ladder_Adventurous_Maps,multiplayer_Aethermaw,multiplayer_Arcanclave_Citadel,multiplayer_Basilisk,multiplayer_Clearing_Gushes,multiplayer_Den_of_Onis_Ladder,multiplayer_elensefar_courtyard,multiplayer_Fallenstar_Lake,multiplayer_Hamlets_Ladder,multiplayer_Hellhole,multiplayer_Hornshark_Island,multiplayer_Howling_Ghost_Badlands,multiplayer_Ruined_Passage,multiplayer_Ruphus_Isle,multiplayer_Sablestone_Delta,multiplayer_Silverhead_Crossing_Ladder,multiplayer_Sullas_Ruins,multiplayer_Swamp_of_Dread,multiplayer_The_Freelands_Ladder,multiplayer_The_Walls_of_Pyrennis,multiplayer_thousand_stings_garrison,multiplayer_Tombs_of_Kesorak,multiplayer_Weldyn_Channel
+    allow_scenario={LE_MAP_PICKER_IDS},{LE_1v1_DEFAULT_SCENARIO_IDS},{LE_1v1_MODIFIED_SCENARIO_IDS},{LE_2v2_SCENARIO_IDS}
 
     {RANDOM_SIDE}
     {~add-ons/Ladder_Era/factions/drakes.cfg}
@@ -29,3 +41,7 @@
 [/era]
 
 #undef LADDER_ERA_VERSION
+#undef LE_MAP_PICKER_IDS
+#undef LE_1v1_DEFAULT_SCENARIO_IDS
+#undef LE_1v1_MODIFIED_SCENARIO_IDS
+#undef LE_2v2_SCENARIO_IDS
