--- a/macros/map_picker.cfg
+++ b/macros/map_picker.cfg
@@ -109,21 +109,46 @@
         {LE_SAVE_SIDES}
 
         {CREATE_MAP_POOL}
-        {RANDOM "1..$map_pool.length"}
-        {VARIABLE next_scenario $map_pool["$($random - 1)"].id}
 
-        {CLEAR_VARIABLE map_pool,random}
+        # Move to next scenario if more than one map is present in the map pool
+        # Show error otherwise
+        [if]
+            [variable]
+                name=map_pool.length
+                greater_than=1
+            [/variable]
+            [then]
+                {RANDOM "1..$map_pool.length"}
+                {VARIABLE next_scenario $map_pool["$($random - 1)"].id}
 
-        [endlevel]
-            result=victory
-            next_scenario=$next_scenario
+                {CLEAR_VARIABLE map_pool,random}
 
-            carryover_percentage=0
-            carryover_report=false
+                [endlevel]
+                    result=victory
+                    next_scenario=$next_scenario
 
-            linger_mode=false
-            save=no
-            replay_save=no
-        [/endlevel]
+                    carryover_percentage=0
+                    carryover_report=false
+
+                    linger_mode=false
+                    save=no
+                    replay_save=no
+                [/endlevel]
+            [/then]
+            [else]
+                [message]
+                    speaker=narrator
+                    image=wesnoth-icon.png
+                    message=_"Error: add at least two maps to the map pool."
+                [/message]
+                [endlevel]
+                    result=defeat
+
+                    linger_mode=false
+                    save=no
+                    replay_save=no
+                [/endlevel]
+            [/else]
+        [/if]
     [/event]
 #enddef
