--- a/macros/map_picker.cfg
+++ b/macros/map_picker.cfg
@@ -23,7 +23,6 @@
             [/has_unit]
         [/filter_side]
         village_gold=${SIDE_VARIABLE_NAME}.village_gold
-        recruit=${SIDE_VARIABLE_NAME}.recruit
         color=${SIDE_VARIABLE_NAME}.color
     [/modify_side]
 #enddef
@@ -38,14 +37,26 @@
     [/event]
 #enddef
 
-#define LE_SIDE1
-  side=1
-  id=id1
+#define LE_MAP_PICKER_SCENARIO_SIDE1
+    side=1
+    id=id1
 #enddef
 
-#define LE_SIDE2
-  side=2
-  id=id2
+#define LE_MAP_PICKER_SCENARIO_SIDE2
+    side=2
+    id=id2
+#enddef
+
+#define LE_RANDOM_SCENARIO_SIDE1
+    side=1
+    id=id1
+    faction=Custom
+#enddef
+
+#define LE_RANDOM_SCENARIO_SIDE2
+    side=2
+    id=id2
+    faction=Custom
 #enddef
 
 #define LE_RANDOM_SCENARIO_COMMON_CODE
@@ -87,7 +98,7 @@
     map_data="{~add-ons/Ladder_Era/map_picker/ui/Map_Picker_UI.map}"
 
     [side]
-        {LE_SIDE1}
+        {LE_MAP_PICKER_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=team1
@@ -95,7 +106,7 @@
         fog=yes
     [/side]
     [side]
-        {LE_SIDE2}
+        {LE_MAP_PICKER_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=team2
