--- a/map_picker/scenarios/2p_Sullas_Ruins.cfg
+++ b/map_picker/scenarios/2p_Sullas_Ruins.cfg
@@ -54,7 +54,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=south
@@ -66,7 +66,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=north
