--- a/map_picker/scenarios/2p_Tombs_of_Kesorak.cfg
+++ b/map_picker/scenarios/2p_Tombs_of_Kesorak.cfg
@@ -101,7 +101,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         gold=125
         canrecruit=yes
         controller=human
@@ -113,7 +113,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         gold=125
         canrecruit=yes
         controller=human
