--- a/map_picker/scenarios/2p_Arcanclave_Citadel.cfg
+++ b/map_picker/scenarios/2p_Arcanclave_Citadel.cfg
@@ -17,7 +17,7 @@
         [ai]
             villages_per_scout=12
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=east
@@ -30,7 +30,7 @@
         [ai]
             villages_per_scout=12
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=west
