--- a/map_picker/scenarios/2p_Caves_of_the_Basilisk.cfg
+++ b/map_picker/scenarios/2p_Caves_of_the_Basilisk.cfg
@@ -48,7 +48,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=north
@@ -60,7 +60,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=south
