--- a/map_picker/scenarios/2p_Elensefar_Courtyard.cfg
+++ b/map_picker/scenarios/2p_Elensefar_Courtyard.cfg
@@ -16,7 +16,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         gold=125
         canrecruit=yes
         controller=human
@@ -28,7 +28,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         gold=125
         canrecruit=yes
         controller=human
