--- a/map_picker/scenarios/2p_Fallenstar_Lake.cfg
+++ b/map_picker/scenarios/2p_Fallenstar_Lake.cfg
@@ -19,7 +19,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=west
@@ -30,7 +30,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=east
