--- a/map_picker/scenarios/2p_Hellhole.cfg
+++ b/map_picker/scenarios/2p_Hellhole.cfg
@@ -38,7 +38,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=south
@@ -49,7 +49,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=north
