--- a/map_picker/scenarios/2p_Hornshark_Island.cfg
+++ b/map_picker/scenarios/2p_Hornshark_Island.cfg
@@ -16,7 +16,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         gold=75
         canrecruit=yes
         controller=human
@@ -28,7 +28,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         gold=75
         canrecruit=yes
         controller=human
