--- a/map_picker/scenarios/2p_Howling_Ghost_Badlands.cfg
+++ b/map_picker/scenarios/2p_Howling_Ghost_Badlands.cfg
@@ -32,7 +32,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=south
@@ -43,7 +43,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=north
