--- a/map_picker/scenarios/2p_Swamp_of_Dread.cfg
+++ b/map_picker/scenarios/2p_Swamp_of_Dread.cfg
@@ -18,7 +18,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         canrecruit=yes
         controller=human
         team_name=north
@@ -29,7 +29,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         canrecruit=yes
         controller=human
         team_name=south
