--- a/map_picker/scenarios/2p_Thousand_Stings_Garrison.cfg
+++ b/map_picker/scenarios/2p_Thousand_Stings_Garrison.cfg
@@ -48,7 +48,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE1}
+        {LE_RANDOM_SCENARIO_SIDE1}
         gold=150
         canrecruit=yes
         controller=human
@@ -60,7 +60,7 @@
         [ai]
             villages_per_scout=7
         [/ai]
-        {LE_SIDE2}
+        {LE_RANDOM_SCENARIO_SIDE2}
         gold=150
         canrecruit=yes
         controller=human
