--- a/macros/map_picker.cfg
+++ b/macros/map_picker.cfg
@@ -37,6 +37,35 @@
     [/event]
 #enddef
 
+#define LE_PRINT_MAP_POOL
+    [event]
+        name=prestart
+
+        [set_variable]
+            name=maps
+            [join]
+                variable=map_pool
+                key=name
+                separator="
+"
+            [/join]
+        [/set_variable]
+        [chat]
+          speaker=""
+          message="Map pool:"
+        [/chat]
+        [chat]
+          speaker=""
+          message=$maps
+        [/chat]
+        [chat]
+          speaker="Press"
+          message="/me ctrl+x to clear"
+        [/chat]
+        {CLEAR_VARIABLE map_pool,maps}
+    [/event]
+#enddef
+
 #define LE_MAP_PICKER_SCENARIO_SIDE1
     side=1
     id=id1
@@ -63,6 +92,7 @@
     allow_new_game=no
     experience_modifier=70
     {LE_LOAD_SIDES}
+    {LE_PRINT_MAP_POOL}
 #enddef
 
 #define LE_MAP_CHECKBOX MAP_ID MAP_NAME
@@ -74,7 +104,7 @@
 #enddef
 
 # Is used as part of CREATE_MAP_POOL for the LE_MAP_PICKER_COMMON_CODE
-#define LE_MAP_POOL MAP_ID
+#define LE_MAP_POOL MAP_ID MAP_NAME
     [if]
         [variable]
             name={MAP_ID}
@@ -86,6 +116,7 @@
                 mode=append
                 [value]
                     id={MAP_ID}
+                    name={MAP_NAME}
                 [/value]
             [/set_variables]
         [/then]
@@ -132,7 +163,8 @@
                 {RANDOM "1..$map_pool.length"}
                 {VARIABLE next_scenario $map_pool["$($random - 1)"].id}
 
-                {CLEAR_VARIABLE map_pool,random}
+                # map_pool variable is printed in the scenario, don't clear it here
+                {CLEAR_VARIABLE random}
 
                 [endlevel]
                     result=victory
