--- a/map_picker/Adventurous_Maps.cfg
+++ b/map_picker/Adventurous_Maps.cfg
@@ -22,17 +22,18 @@ Aethermaw, Arcanclave Citadel, Clearing Gushes, Elensefar Courtyard, Hellhole, H
 
     {LE_MAP_PICKER_COMMON_CODE
     (
-        {LE_MAP_POOL multiplayer_Aethermaw_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Arcanclave_Citadel_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Clearing_Gushes_Ladder_Random}
-        {LE_MAP_POOL multiplayer_elensefar_courtyard_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hellhole_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Howling_Ghost_Badlands_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Ruined_Passage_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Ruphus_Isle_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Swamp_of_Dread_Ladder_Random}
-        {LE_MAP_POOL multiplayer_The_Walls_of_Pyrennis_Ladder_Random}
-        {LE_MAP_POOL multiplayer_thousand_stings_garrison_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Tombs_of_Kesorak_Ladder_Random}
+        # Non-translatable strings are used intentionally, this information is useful for the opponent and observers
+        {LE_MAP_POOL multiplayer_Aethermaw_Ladder_Random "Aethermaw"}
+        {LE_MAP_POOL multiplayer_Arcanclave_Citadel_Ladder_Random "Arcanclave Citadel"}
+        {LE_MAP_POOL multiplayer_Clearing_Gushes_Ladder_Random "Clearing Gushes"}
+        {LE_MAP_POOL multiplayer_elensefar_courtyard_Ladder_Random "Elensefar Courtyard"}
+        {LE_MAP_POOL multiplayer_Hellhole_Ladder_Random "Hellhole"}
+        {LE_MAP_POOL multiplayer_Howling_Ghost_Badlands_Ladder_Random "Howling Ghost Badlands"}
+        {LE_MAP_POOL multiplayer_Ruined_Passage_Ladder_Random "Ruined Passage"}
+        {LE_MAP_POOL multiplayer_Ruphus_Isle_Ladder_Random "Ruphus Isle"}
+        {LE_MAP_POOL multiplayer_Swamp_of_Dread_Ladder_Random "Swamp of Dread"}
+        {LE_MAP_POOL multiplayer_The_Walls_of_Pyrennis_Ladder_Random "The Walls of Pyrennis"}
+        {LE_MAP_POOL multiplayer_thousand_stings_garrison_Ladder_Random "Thousand Stings Garrison"}
+        {LE_MAP_POOL multiplayer_Tombs_of_Kesorak_Ladder_Random "Tombs of Kesorak"}
     )}
 [/multiplayer]
