--- a/map_picker/All_Maps.cfg
+++ b/map_picker/All_Maps.cfg
@@ -32,27 +32,28 @@ Aethermaw, Arcanclave Citadel, Caves of the Basilisk, Clearing Gushes, Den of On
 
     {LE_MAP_PICKER_COMMON_CODE
     (
-        {LE_MAP_POOL multiplayer_Aethermaw_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Arcanclave_Citadel_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Basilisk_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Clearing_Gushes_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random}
-        {LE_MAP_POOL multiplayer_elensefar_courtyard_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hellhole_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Howling_Ghost_Badlands_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Ruined_Passage_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Ruphus_Isle_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Swamp_of_Dread_Ladder_Random}
-        {LE_MAP_POOL multiplayer_The_Freelands_Ladder_Random}
-        {LE_MAP_POOL multiplayer_The_Walls_of_Pyrennis_Ladder_Random}
-        {LE_MAP_POOL multiplayer_thousand_stings_garrison_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Tombs_of_Kesorak_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Weldyn_Channel_Ladder_Random}
+        # Non-translatable strings are used intentionally, this information is useful for the opponent and observers
+        {LE_MAP_POOL multiplayer_Aethermaw_Ladder_Random "Aethermaw"}
+        {LE_MAP_POOL multiplayer_Arcanclave_Citadel_Ladder_Random "Arcanclave Citadel"}
+        {LE_MAP_POOL multiplayer_Basilisk_Ladder_Random "Caves of the Basilisk"}
+        {LE_MAP_POOL multiplayer_Clearing_Gushes_Ladder_Random "Clearing Gushes"}
+        {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random "Den of Onis"}
+        {LE_MAP_POOL multiplayer_elensefar_courtyard_Ladder_Random "Elensefar Courtyard"}
+        {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random "Fallenstar Lake"}
+        {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random "Hamlets"}
+        {LE_MAP_POOL multiplayer_Hellhole_Ladder_Random "Hellhole"}
+        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random "Hornshark Island"}
+        {LE_MAP_POOL multiplayer_Howling_Ghost_Badlands_Ladder_Random "Howling Ghost Badlands"}
+        {LE_MAP_POOL multiplayer_Ruined_Passage_Ladder_Random "Ruined Passage"}
+        {LE_MAP_POOL multiplayer_Ruphus_Isle_Ladder_Random "Ruphus Isle"}
+        {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random "Sablestone Delta"}
+        {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random "Silverhead Crossing"}
+        {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random "Sulla’s Ruins"}
+        {LE_MAP_POOL multiplayer_Swamp_of_Dread_Ladder_Random "Swamp of Dread"}
+        {LE_MAP_POOL multiplayer_The_Freelands_Ladder_Random "The Freelands"}
+        {LE_MAP_POOL multiplayer_The_Walls_of_Pyrennis_Ladder_Random "The Walls of Pyrennis"}
+        {LE_MAP_POOL multiplayer_thousand_stings_garrison_Ladder_Random "Thousand Stings Garrison"}
+        {LE_MAP_POOL multiplayer_Tombs_of_Kesorak_Ladder_Random "Tombs of Kesorak"}
+        {LE_MAP_POOL multiplayer_Weldyn_Channel_Ladder_Random "Weldyn Channel"}
     )}
 [/multiplayer]
