--- a/map_picker/Classic_Maps.cfg
+++ b/map_picker/Classic_Maps.cfg
@@ -20,15 +20,16 @@ Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Hornshark Island, 
 
     {LE_MAP_PICKER_COMMON_CODE
     (
-        {LE_MAP_POOL multiplayer_Basilisk_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random}
-        {LE_MAP_POOL multiplayer_The_Freelands_Ladder_Random}
-        {LE_MAP_POOL multiplayer_Weldyn_Channel_Ladder_Random}
+        # Non-translatable string are used intentionally, this information is useful for the opponent and observers
+        {LE_MAP_POOL multiplayer_Basilisk_Ladder_Random "Caves of the Basilisk"}
+        {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random "Den of Onis"}
+        {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random "Fallenstar Lake"}
+        {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random "Hamlets"}
+        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random "Hornshark Island"}
+        {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random "Sablestone Delta"}
+        {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random "Silverhead Crossing"}
+        {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random "Sulla’s Ruins"}
+        {LE_MAP_POOL multiplayer_The_Freelands_Ladder_Random "The Freelands"}
+        {LE_MAP_POOL multiplayer_Weldyn_Channel_Ladder_Random "Weldyn Channel"}
     )}
 [/multiplayer]
