--- a/factions/rebels.cfg
+++ b/factions/rebels.cfg
@@ -4,7 +4,7 @@
     name= _"Rebels"
     image="units/elves-wood/captain.png"
     type=random
-    leader=Elvish Captain,Elvish Hero,Elvish Ranger,Elvish Marksman,Elvish Druid,Elvish Sorceress
+    leader=Elvish Captain,Elvish Hero,Elvish Ranger,Elvish Marksman,Elvish Druid
     recruit=Elvish Fighter,Elvish Archer,Mage,Elvish Shaman Ladder_0_1,Elvish Scout,Wose Ladder_0_1,Merman Hunter Ladder_0_1
     terrain_liked=Ff, Fa, Ss, Ww
     # wmllint: markcheck off
