--- a/map_picker/Classic_Maps.cfg
+++ b/map_picker/Classic_Maps.cfg
@@ -3,14 +3,13 @@
     id=Ladder_Classic_Maps
     name=_"Ladder Classic Maps"
     description=_"Pool of maps may be configured under the <i>Custom Options</i> tab. Note that quitting the game does not reset the map pool configuration.
-Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Hornshark Island, Sablestone Delta, Silverhead Crossing, Sullas Ruins, The Freelands, Weldyn Channel"
+Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Sablestone Delta, Silverhead Crossing, Sullas Ruins, The Freelands, Weldyn Channel"
 
     [options]
         {LE_MAP_CHECKBOX multiplayer_Basilisk_Ladder_Random _"2p — Caves of the Basilisk"}
         {LE_MAP_CHECKBOX multiplayer_Den_of_Onis_Ladder_Random _"2p — Den of Onis"}
         {LE_MAP_CHECKBOX multiplayer_Fallenstar_Lake_Ladder_Random _"2p — Fallenstar Lake"}
         {LE_MAP_CHECKBOX multiplayer_Hamlets_Ladder_Random _"2p — Hamlets"}
-        {LE_MAP_CHECKBOX multiplayer_Hornshark_Island_Ladder_Random _"2p — Hornshark Island"}
         {LE_MAP_CHECKBOX multiplayer_Sablestone_Delta_Ladder_Random _"2p — Sablestone Delta"}
         {LE_MAP_CHECKBOX multiplayer_Silverhead_Crossing_Ladder_Random _"2p — Silverhead Crossing"}
         {LE_MAP_CHECKBOX multiplayer_Sullas_Ruins_Ladder_Random _"2p — Sulla’s Ruins"}
@@ -25,7 +24,6 @@ Caves of the Basilisk, Den of Onis, Fallenstar Lake, Hamlets, Hornshark Island, 
         {LE_MAP_POOL multiplayer_Den_of_Onis_Ladder_Random "Den of Onis"}
         {LE_MAP_POOL multiplayer_Fallenstar_Lake_Ladder_Random "Fallenstar Lake"}
         {LE_MAP_POOL multiplayer_Hamlets_Ladder_Random "Hamlets"}
-        {LE_MAP_POOL multiplayer_Hornshark_Island_Ladder_Random "Hornshark Island"}
         {LE_MAP_POOL multiplayer_Sablestone_Delta_Ladder_Random "Sablestone Delta"}
         {LE_MAP_POOL multiplayer_Silverhead_Crossing_Ladder_Random "Silverhead Crossing"}
         {LE_MAP_POOL multiplayer_Sullas_Ruins_Ladder_Random "Sulla’s Ruins"}
