--- a/macros/map_picker.cfg
+++ b/macros/map_picker.cfg
@@ -10,30 +10,37 @@
 #enddef
 
 #define LE_SAVE_SIDES
-    {LE_SAVE_SINGLE_SIDE id1 side1}
-    {LE_SAVE_SINGLE_SIDE id2 side2}
+    {LE_SAVE_SINGLE_SIDE id1 old_side1}
+    {LE_SAVE_SINGLE_SIDE id2 old_side2}
 #enddef
 
 #define LE_LOAD_SINGLE_SIDE LEADER_ID SIDE_VARIABLE_NAME
-    # Can't use side number here because of shuffle sides
+    # Side number will be different if sides were shuffled
+    [store_side]
+        [has_unit]
+            id={LEADER_ID}
+        [/has_unit]
+        variable=new_side
+    [/store_side]
     [modify_side]
-        [filter_side]
-            [has_unit]
-                id={LEADER_ID}
-            [/has_unit]
-        [/filter_side]
+        side=$new_side.side
         village_gold=${SIDE_VARIABLE_NAME}.village_gold
         color=${SIDE_VARIABLE_NAME}.color
     [/modify_side]
+    # Actual factions are currently needed only for Hornshark Island map, since extra units on that map depend on
+    # the faction. Variable names will be side1_faction and side2_faction, were number corresponds to the actual side
+    # number in the scenario.
+    {VARIABLE side$new_side.side|_faction ${SIDE_VARIABLE_NAME}.faction}
+    {CLEAR_VARIABLE new_side}
 #enddef
 
 #define LE_LOAD_SIDES
     [event]
         name=prestart
 
-        {LE_LOAD_SINGLE_SIDE id1 side1}
-        {LE_LOAD_SINGLE_SIDE id2 side2}
-        {CLEAR_VARIABLE side1,side2,next_scenario}
+        {LE_LOAD_SINGLE_SIDE id1 old_side1}
+        {LE_LOAD_SINGLE_SIDE id2 old_side2}
+        {CLEAR_VARIABLE old_side1,old_side2,next_scenario}
     [/event]
 #enddef
 
