--- a/map_picker/scenarios/2p_Hornshark_Island.cfg
+++ b/map_picker/scenarios/2p_Hornshark_Island.cfg
@@ -40,23 +40,10 @@
     [event]
         name=prestart
 
-        [lua]
-            code= << wesnoth.dofile("multiplayer/scenarios/2p_Hornshark_Island.lua") >>
-        [/lua]
-
-        [fire_event]
-            name=place_units
-        [/fire_event]
-        {CLEAR_VARIABLE factions}
-    [/event]
-
-    [event]
-        name=place_units
-
         [switch]
-            variable=p1_faction
+            variable=side1_faction
             [case]
-                value=Drakes
+                value=Drakes,Ladder Drakes
 
                 [unit]
                     side=1
@@ -110,7 +97,7 @@
                 [/unit]
             [/case]
             [case]
-                value=Knalgan Alliance
+                value=Knalgan Alliance,Ladder Knalgan Alliance
 
                 [unit]
                     side=1
@@ -172,7 +159,7 @@
             [/case]
 
             [case]
-                value=Loyalists
+                value=Loyalists,Ladder Loyalists
 
                 [unit]
                     side=1
@@ -244,7 +231,7 @@
             [/case]
 
             [case]
-                value=Northerners
+                value=Northerners,Ladder Northerners
 
                 [unit]
                     side=1
@@ -297,7 +284,7 @@
             [/case]
 
             [case]
-                value=Rebels
+                value=Rebels,Ladder Rebels
 
                 [unit]
                     side=1
@@ -352,7 +339,7 @@
                 [/unit]
             [/case]
             [case]
-                value=Undead
+                value=Undead,Ladder Undead
 
                 [unit]
                     x,y=23,3
@@ -499,9 +486,9 @@
         [/switch]
 
         [switch]
-            variable=p2_faction
+            variable=side2_faction
             [case]
-                value=Drakes
+                value=Drakes,Ladder Drakes
 
                 [unit]
                     side=2
@@ -555,7 +542,7 @@
                 [/unit]
             [/case]
             [case]
-                value=Knalgan Alliance
+                value=Knalgan Alliance,Ladder Knalgan Alliance
 
                 [unit]
                     side=2
@@ -617,7 +604,7 @@
             [/case]
 
             [case]
-                value=Loyalists
+                value=Loyalists,Ladder Loyalists
 
                 [unit]
                     side=2
@@ -689,7 +676,7 @@
             [/case]
 
             [case]
-                value=Northerners
+                value=Northerners,Ladder Northerners
 
                 [unit]
                     side=2
@@ -741,7 +728,7 @@
             [/case]
 
             [case]
-                value=Rebels
+                value=Rebels,Ladder Rebels
 
                 [unit]
                     side=2
@@ -796,7 +783,7 @@
                 [/unit]
             [/case]
             [case]
-                value=Undead
+                value=Undead,Ladder Undead
 
                 [unit]
                     x,y=6,20
