--- a/factions/undead.cfg
+++ b/factions/undead.cfg
@@ -5,7 +5,7 @@
     image="units/undead-necromancers/dark-sorcerer.png"
     type=random
     leader=Dark Sorcerer,Revenant,Deathblade,Bone Shooter
-    recruit=Skeleton,Skeleton Archer,Walking Corpse,Ghost Ladder_0_1,Vampire Bat Ladder_0_1,Dark Adept,Ghoul
+    recruit=Skeleton,Skeleton Archer Ladder_0_1,Walking Corpse,Ghost Ladder_0_1,Vampire Bat Ladder_0_1,Dark Adept,Ghoul
     terrain_liked=Ss, Hh, Ha, Ww
     # wmllint: markcheck off
     description="<img>src='portraits/undead/spectre.png~BG()' align='middle'</img>
