--- a/units/dwarves/Steelclad.cfg
+++ b/units/dwarves/Steelclad.cfg
@@ -1,5 +1,28 @@
 #textdomain wesnoth-units
 [unit_type]
+    id=Dwarvish Steelclad Ladder_0_2
+    name=_"Dwarvish Steelclad" + _" (ladder)"
+    [base_unit]
+        id=Dwarvish Steelclad
+    [/base_unit]
+    advances_to=Dwarvish Lord Ladder_0_1
+
+    hitpoints=57
+    num_traits=3
+    ignore_race_traits=yes
+    {LE_TRAIT_HARDY_MUSTHAVE}
+    {TRAIT_STRONG}
+    {TRAIT_QUICK}
+    {TRAIT_INTELLIGENT}
+    {TRAIT_RESILIENT}
+
+    description=_"Ladder variation of the Dwarvish Steelclad that has 57 hitpoints; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+
+" + _"Outfitted in the strongest plate and mail of Knalgan forges, the Steelclads are the vanguard of dwarvish armies. They are renowned for their resilience in the heat of battle, and their mastery of both battleaxe and warhammer make them imposing foes indeed."
+[/unit_type]
+
+# Previous version which should be kept to not break old replays.
+[unit_type]
     id=Dwarvish Steelclad Ladder_0_1
     name=_"Dwarvish Steelclad" + _" (ladder)"
     [base_unit]
