--- a/scenarios/2p_Fallenstar_Lake.cfg
+++ b/scenarios/2p_Fallenstar_Lake.cfg
@@ -3,13 +3,11 @@
 # author unknown, revised by Mint
 
 [multiplayer]
-    id=multiplayer_Fallenstar_Lake_Ladder_Random
-    name= _ "2p — Fallenstar Lake"
+    id=multiplayer_Fallenstar_Lake_Ladder
+    name= _ "2p — Fallenstar Lake" + _" (ladder)"
     description= _ "Long ago, a great star fell from the heavens, leaving its mark on this coniferous region."
     map_data="{~add-ons/Ladder_Era/maps/2p_Fallenstar_Lake.map}"
     random_start_time="no"
-
-    {LE_RANDOM_SCENARIO_COMMON_CODE}
 
     {DEFAULT_SCHEDULE_SECOND_WATCH}
 
@@ -19,7 +17,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_RANDOM_SCENARIO_SIDE1}
+        side=1
         canrecruit=yes
         controller=human
         team_name=west
@@ -30,7 +28,7 @@
         [ai]
             villages_per_scout=8
         [/ai]
-        {LE_RANDOM_SCENARIO_SIDE2}
+        side=2
         canrecruit=yes
         controller=human
         team_name=east
