--- a/units/humans/Outlaw_Footpad.cfg
+++ b/units/humans/Outlaw_Footpad.cfg
@@ -5,7 +5,7 @@
     # wmllint: general spelling footpads
     race=human
     gender=male,female
-    image="units/human-outlaws/footpad-hatchet.png"
+    image="units/human-outlaws/footpad.png"
     profile="portraits/humans/footpad.png"
     hitpoints=30
     movement_type=elusivefoot
@@ -20,7 +20,7 @@
 
 " + _"These petty criminals are often derisively called ‘footpads’ by their superiors, for they are tasked with any job that requires a great deal of running around, often being employed as couriers, or scouts. The endurance and agility they gain from this serves them well in combat, and despite their inferior weaponry they are quite good at harrying their enemies, especially under cover of darkness."
     die_sound={SOUND_LIST:HUMAN_DIE}
-    {DEFENSE_ANIM "units/human-outlaws/footpad-hatchet.png" "units/human-outlaws/footpad-hatchet.png" {SOUND_LIST:HUMAN_HIT} }
+    {DEFENSE_ANIM "units/human-outlaws/footpad-defend.png" "units/human-outlaws/footpad.png" {SOUND_LIST:HUMAN_HIT} }
     [attack]
         name=hatchet
         description=_"hatchet"
@@ -70,7 +70,10 @@
         [/filter_attack]
         start_time=-250
         [frame]
-            image="units/human-outlaws/footpad-hatchet.png:450"
+            image="units/human-outlaws/footpad.png:50"
+        [/frame]
+        [frame]
+            image="units/human-outlaws/footpad-melee-[1~4].png:100"
         [/frame]
         {SOUND:HIT_AND_MISS axe.ogg {SOUND_LIST:MISS} -125}
     [/attack_anim]
@@ -85,10 +88,10 @@
     [female]
         name=_"female^Footpad" + _" (ladder)"
         gender=female
-        image="units/human-outlaws/footpad-hatchet.png"
+        image="units/human-outlaws/footpad+female.png"
         profile="portraits/humans/footpad+female.png"
         die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
-        {DEFENSE_ANIM "units/human-outlaws/footpad-hatchet.png" "units/human-outlaws/footpad-hatchet.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
+        {DEFENSE_ANIM "units/human-outlaws/footpad+female-defend.png" "units/human-outlaws/footpad+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
         [attack_anim]
             [filter_attack]
                 name=sling
@@ -114,7 +117,10 @@
                 name=hatchet
             [/filter_attack]
             [frame]
-                image="units/human-outlaws/footpad-hatchet.png:450"
+                image="units/human-outlaws/footpad+female.png:50"
+            [/frame]
+            [frame]
+                image="units/human-outlaws/footpad+female-melee-[1~4].png:100"
             [/frame]
         [/attack_anim]
         [idle_anim]
