--- a/era.cfg
+++ b/era.cfg
@@ -1,7 +1,10 @@
 #textdomain wesnoth-multiplayer
 
 #define LADDER_ERA_VERSION
-"0.1.9"#enddef
+"0.1.10"#enddef
+
+#define LADDER_ERA_MINIMUM_COMPATIBLE_VERSION
+"0.1.3"#enddef
 
 #define LE_MAP_PICKER_IDS
 Ladder_All_Maps,Ladder_Classic_Maps,Ladder_Competitive_Maps,Ladder_Adventurous_Maps#enddef
@@ -19,7 +22,7 @@ multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hop
     id=ladder_era
     name=_"Ladder Era"
     require_era=yes
-    addon_min_version={LADDER_ERA_VERSION}
+    addon_min_version={LADDER_ERA_MINIMUM_COMPATIBLE_VERSION}
     description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
 
     # Only approved maps can be played with this era
